# src/routers/mod.rs
@@ -47,14 +47,14 @@ impl Modify for SecurityAddon {
         crate::routers::perpetual::health::health_handler,
         crate::routers::perpetual::login_auth::login_handler,
         crate::routers::perpetual::unlock::unlock_handler,
-        crate::routers::api::v1::admin_router::get_user,
-        crate::routers::api::v1::admin_router::create_update_user,
-        crate::routers::api::v1::keyvalue_router::get_data,
-        crate::routers::api::v1::keyvalue_router::update_data,
-        crate::routers::api::v1::keyvalue_router::delete_data,
-        crate::routers::api::v1::keyvalue_router::details,
-        crate::routers::api::v1::keyvalue_router::list_selective_keys,
-        crate::routers::api::v1::keyvalue_router::list_all_keys,
+        crate::routers::api::v1::users::get_user,
+        crate::routers::api::v1::users::create_update_user,
+        crate::routers::api::v1::keyvalue::get_data,
+        crate::routers::api::v1::keyvalue::update_data,
+        crate::routers::api::v1::keyvalue::delete_data,
+        crate::routers::api::v1::keyvalue::details,
+        crate::routers::api::v1::keyvalue::list_selective_keys,
+        crate::routers::api::v1::keyvalue::list_all_keys,
     ),
     modifiers(&SecurityAddon),
     tags(
